2003-02-15  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-window.c: 
	- updated to changes when DhHtml is no longer a subclass of
	  HtmlView.

	* src/dh-html-mozilla.c: 
	- added
	- used when compiled with --with-html-widget=mozilla

	* src/dh-html-gtkhtml2.c: 
	- The old dh-html.c
	- Don't subclass HtmlView
	- Added dh_html_get_widget
	- This is used if not compiled with --with-html-widget=mozilla

	* configure.in: added support to compile
	  --with-html-widget=mozilla (works great with this!)

	* src/dh-search.c (search_entry_key_press_event_cb): 
	- Added, don't move focus when hitting tab in search entry.
	- Move to hit list when Ctrl+tab.

2003-02-13  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-book-tree.c (book_tree_insert_node): speeeeeeeeeeedup!

	* src/dh-parser.[ch]: Added, new GMarkup-based parser.

	* src/dh-book.[ch]:
	* src/dh-book-old.[ch]: Removed.

	* src/dh-base.c: 
	- initiate the book tree and keywords here instead of in the
	  profile. (will probably be some kind of profiles later on).
	(base_init_books): added.
	(base_add_books): added.

	* src/Makefile.am (libdevhelp2_la_SOURCES): 
	- updated for removed/added files.
	- Don't build the test-profile binary (disabled profiles for now).

2003-02-09  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "kn" to ALL_LINGUAS.

2003-02-02  Daniel Yacob  <locales@geez.org>

	* configure.in: Added Amharic (am) to ALL_LINGUAS

2003-02-01  Richard Hult  <rhult@codefactory.se>

	* src/dh-main.c (main): Don't create a base and window if we're
	only contacting an already running instance.

	* src/dh-book-old.c (dh_book_old_read): Fix style.
	(book_old_validate): Zero out the validation context before using
	it to silence valgrind.

	* dtd/devhelp-1.dtd: Add author property to book element.

	* src/dh-window.c (window_populate): Fix typo in error message
	dialog.

2003-01-31  Richard Hult  <rhult@codefactory.se>

	* src/dh-book-tree.c (book_tree_finalize): Chain up.
