@@ -11,6 +11,16 @@ AC_PROG_CPP
 AC_ISC_POSIX
 AC_HEADER_STDC
 AM_PROG_LIBTOOL
+AM_PATH_GLIB_2_0
+
+dnl NOTE : it appears that some systems do not like it when you use line
+dnl        continuation charactes to split CFLAGS into readable chunks
+if test "x$GCC" = "xyes"; then
+   CFLAGS="$CFLAGS -Wall -Wno-uninitialized -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith	 -Wno-sign-compare -Wsign-promo"
+fi
+
+AC_SUBST(CFLAGS)
+AC_SUBST(LDFLAGS)
 
 AC_ARG_WITH(html-widget, [  --with-html-widget=[gtkhtml2/mozilla] html widget to use])
 
